--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               
                   <!-- Collect the nav links, forms, and other content for toggling -->
                   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
+                    <ul class="nav navbar-nav visible-md-block visible-lg-block visible-xs-block">
                         <li class="dropdown">
                           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <b class="caret"></b></a>
                           <ul class="dropdown-menu">
