--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
         <link rel="stylesheet" href="css/style.css">
         <title>Document</title>
@@ -112,7 +114,26 @@
             <!-- /JUMBOTRON -->
 
             <!-- SPONSOR -->
-
+            <section id="sponsor" class="text-center">
+                <h4>innovative businesses trust digitalocean</h4>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-4">
+                            <img src="img/docker.svg" alt="docker">
+                            <img src="img/gitlab.svg" alt="gitlab">
+                        </div>
+                        <div class="col-xs-12 col-sm-4">
+                            <img src="img/slack.svg" alt="slack">
+                            <img src="img/hashicorp.svg" alt="hashicorp">
+                        </div>
+                        <div class="col-xs-12 col-sm-4">
+                            <img src="img/hashicorp.svg" alt="hashicorp">
+                            <img src="img/splunk.svg" alt="splunk">
+                        </div>
+                    </div>
+                </div>
+                <a href="#">View customers stories ></a>
+            </section>
             <!-- /SPONSOR -->
         </header>
         <!-- /HEADER -->
