--- a/index.html
+++ b/index.html
@@ -196,6 +196,63 @@
                 </div>
             </section>
             <!-- /DEPLOY AND SCALE -->
+
+            <!-- DESIGNED FOR DEVELOPERS -->
+            <section id="designed">
+                <div class="container">
+                    <h2 class="text-center">Designed for developers</h2>
+                    <p class="text-center">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
+                    <div class="wrapper70">
+                        <i class="fas fa-angle-left"></i>
+                        <img src="img/slide.jpg" alt="slide">
+                        <i class="fas fa-angle-right"></i>
+                        <figure>
+                            <figcaption>
+                                <h5>Create compute servers in 55 seconds or less.</h5>
+                            </figcaption>
+                        </figure>
+                        <i class="fas fa-circle"></i>
+                        <i class="far fa-circle"></i>
+                        <i class="far fa-circle"></i>
+                        <i class="far fa-circle"></i>
+                    </div>
+                </div>
+            </section>
+            <!-- /DESIGNED FOR DEVELOPERS -->
+
+            <!-- THE FEATURES -->
+            <section id="features">
+                <h2 class="text-center">The features your business needs</h2>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <img src="img/pred-pricing.svg" alt="pricing">
+                            <h3>Predictable pricing </h3>
+                            <p>Leave complex pricing structures behind. Always 
+                                know what you'II pay per month with a flat, industry-leading pricing structure. 
+                            </p>
+                            <a href="#">Pricing ></a>
+                        </div>
+                        <div class="col-sm-4">
+                            <img src="img/pred-pricing.svg" alt="pricing">
+                            <h3>Predictable pricing </h3>
+                            <p>Leave complex pricing structures behind. Always 
+                                know what you'II pay per month with a flat, industry-leading pricing structure. 
+                            </p>
+                            <a href="#">Pricing ></a>
+                        </div>
+                        <div class="col-sm-4">
+                            <img src="img/pred-pricing.svg" alt="pricing">
+                            <h3>Predictable pricing </h3>
+                            <p>Leave complex pricing structures behind. Always 
+                                know what you'II pay per month with a flat, industry-leading pricing structure. 
+                            </p>
+                            <a href="#">Pricing ></a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- /THE FEATURES -->
         </main>
         <!-- /MAIN -->
 
