--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <p class="text-center">Our optimized configuration process saves your team time when running and scaling distributed applications, Al & machine learning workloads, hosted services, client websites, or Cl/CD environments. </p>
                     <div class="row">
                         <div class="col-xs-4">
-                            <div class="col-xs-3 col-sm-offset-3">
+                            <div class="col-xs-3 col-sm-offset-2">
                                 <ul class="nav nav-pills">
                                     <li role="presentation"><a href="#">Deploy</a></li>
                                     <li role="presentation"><a href="#">Manage</a></li>
@@ -203,9 +203,9 @@
                     <h2 class="text-center">Designed for developers</h2>
                     <p class="text-center">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
                     <div class="wrapper70">
-                        <i class="fas fa-angle-left"></i>
+                        <i class="fas fa-angle-left hidden-xs"></i>
                         <img src="img/slide.jpg" alt="slide">
-                        <i class="fas fa-angle-right"></i>
+                        <i class="fas fa-angle-right hidden-xs"></i>
                         <figure>
                             <figcaption>
                                 <h5>Create compute servers in 55 seconds or less.</h5>
@@ -234,25 +234,173 @@
                             <a href="#">Pricing ></a>
                         </div>
                         <div class="col-sm-4">
-                            <img src="img/pred-pricing.svg" alt="pricing">
-                            <h3>Predictable pricing </h3>
-                            <p>Leave complex pricing structures behind. Always 
-                                know what you'II pay per month with a flat, industry-leading pricing structure. 
+                            <img src="img/world-class.svg" alt="worldclass">
+                            <h3>World-class service</h3>
+                            <p>Free round-the-clock technical support for ali customers. You'II feel the love. 
                             </p>
-                            <a href="#">Pricing ></a>
+                            <a href="#">Support ></a>
                         </div>
                         <div class="col-sm-4">
-                            <img src="img/pred-pricing.svg" alt="pricing">
-                            <h3>Predictable pricing </h3>
-                            <p>Leave complex pricing structures behind. Always 
-                                know what you'II pay per month with a flat, industry-leading pricing structure. 
+                            <img src="img/reliable-platform.svg" alt="platform">
+                            <h3>Reliable platform</h3>
+                            <p>More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA forali services.  
                             </p>
-                            <a href="#">Pricing ></a>
+                            <a href="#">Security ></a>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- /THE FEATURES -->
+
+            <!-- SERVICE -->
+            <section id="service">
+                <h2 class="text-center">Service your customers around the world from 12 regions.</h2>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="row">
+                                <div class="service_element">
+                                    <div class="col-xs-1">
+                                        <span>AMS2</span>
+                                    </div>
+                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                        <span>Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                        <span><a>Test speed ></a></span>
+                                    </div>
+                                </div>
+                                <div class="service_element">
+                                    <div class="col-xs-1">
+                                        <span>AMS3</span>
+                                    </div>
+                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                        <span>Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                        <span><a>Test speed ></a></span>
+                                    </div>
+                                </div>
+                                <div class="service_element">
+                                    <div class="col-xs-1">
+                                        <span>BLR1</span>
+                                    </div>
+                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                        <span>Bangalore, India</span>
+                                    </div>
+                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                        <span><a>Test speed ></a></span>
+                                    </div>
+                                </div>
+                                <div class="service_element">
+                                    <div class="col-xs-1">
+                                        <span>FRA1</span>
+                                    </div>
+                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                        <span>Frankfurt, German</span>
+                                    </div>
+                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                        <span><a>Test speed ></a></span>
+                                    </div>
+                                </div>
+                                <div class="service_element">
+                                    <div class="col-xs-1">
+                                        <span>LON1</span>
+                                    </div>
+                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                        <span>London, UK</span>
+                                    </div>
+                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                        <span><a>Test speed ></a></span>
+                                    </div>
+                                </div>
+                                <div class="service_element">
+                                    <div class="col-xs-1">
+                                        <span>NYC1</span>
+                                    </div>
+                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                        <span>New York, USA</span>
+                                    </div>
+                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                        <span><a>Test speed ></a></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="row">
+                                <div class="service_element">
+                                    <div class="col-xs-1">
+                                        <span>AMS2</span>
+                                    </div>
+                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                        <span>Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                        <span><a>Test speed ></a></span>
+                                    </div>
+                                </div>
+                                <div class="service_element">
+                                    <div class="col-xs-1">
+                                        <span>AMS3</span>
+                                    </div>
+                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                        <span>Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                        <span><a>Test speed ></a></span>
+                                    </div>
+                                </div>
+                                <div class="service_element">
+                                    <div class="col-xs-1">
+                                        <span>AMS2</span>
+                                    </div>
+                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                        <span>Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                        <span><a>Test speed ></a></span>
+                                    </div>
+                                </div>
+                                <div class="service_element">
+                                    <div class="col-xs-1">
+                                        <span>FRA1</span>
+                                    </div>
+                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                        <span>Frankfurt, German</span>
+                                    </div>
+                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                        <span><a>Test speed ></a></span>
+                                    </div>
+                                </div>
+                                <div class="service_element">
+                                    <div class="col-xs-1">
+                                        <span>LON1</span>
+                                    </div>
+                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                        <span>London, UK</span>
+                                    </div>
+                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                        <span><a>Test speed ></a></span>
+                                    </div>
+                                </div>
+                                <div class="service_element">
+                                    <div class="col-xs-1">
+                                        <span>NYC1</span>
+                                    </div>
+                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                        <span>New York, USA</span>
+                                    </div>
+                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                        <span><a>Test speed ></a></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- /SERVICE -->
         </main>
         <!-- /MAIN -->
 
