--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <!-- /JUMBOTRON -->
 
             <!-- SPONSOR -->
-            <section id="sponsor" class="text-center">
+            <section id="sponsor">
                 <h4>innovative businesses trust digitalocean</h4>
                 <div class="container">
                     <div class="row">
@@ -401,6 +401,30 @@
                 </div>
             </section>
             <!-- /SERVICE -->
+
+            <!-- ROCKERBOX -->
+            <section id="rockerbox">
+                <div class="container">
+                    <h2 class="text-center">Development teams love DigitalOcean</h2>
+                    <div class="wrapper70">
+                        <i class="fas fa-angle-left hidden-xs"></i>
+                        <div class="rockerbox_element">
+                            <img src="img/rockerbox.png" alt="rockerbox">
+                            <p>"We have been able to make scaling the technical 
+                                infrastructure of our business cost effective and efficient."
+                            </p>
+                            <h5>Rick O'Toole </h5>
+                            <h5>Co-founder and CTO</h5>
+                            <a href="#">Read story ></a>
+                        </div>
+                        <i class="fas fa-angle-right hidden-xs"></i>
+                        <i class="fas fa-circle"></i>
+                        <i class="far fa-circle"></i>
+                        <i class="far fa-circle"></i>
+                    </div> 
+                </div>
+            </section>
+            <!-- /ROCKERBOX -->
         </main>
         <!-- /MAIN -->
 
