--- a/index.html
+++ b/index.html
@@ -260,68 +260,68 @@
                         <div class="col-md-6">
                             <div class="row">
                                 <div class="service_element">
-                                    <div class="col-xs-1">
+                                    <div class="col-xs-2">
                                         <span>AMS2</span>
                                     </div>
-                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                    <div class="col-xs-6 text_left">
                                         <span>Amsterdam, Netherlands</span>
                                     </div>
-                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                    <div class="col-xs-4 text_right">
                                         <span><a>Test speed ></a></span>
                                     </div>
                                 </div>
                                 <div class="service_element">
-                                    <div class="col-xs-1">
+                                    <div class="col-xs-2">
                                         <span>AMS3</span>
                                     </div>
-                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                    <div class="col-xs-6 text_left">
                                         <span>Amsterdam, Netherlands</span>
                                     </div>
-                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                    <div class="col-xs-4 text_right">
                                         <span><a>Test speed ></a></span>
                                     </div>
                                 </div>
                                 <div class="service_element">
-                                    <div class="col-xs-1">
+                                    <div class="col-xs-2">
                                         <span>BLR1</span>
                                     </div>
-                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                    <div class="col-xs-6 text_left">
                                         <span>Bangalore, India</span>
                                     </div>
-                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                    <div class="col-xs-4 text_right">
                                         <span><a>Test speed ></a></span>
                                     </div>
                                 </div>
                                 <div class="service_element">
-                                    <div class="col-xs-1">
+                                    <div class="col-xs-2">
                                         <span>FRA1</span>
                                     </div>
-                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                    <div class="col-xs-6 text_left">
                                         <span>Frankfurt, German</span>
                                     </div>
-                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                    <div class="col-xs-4 text_right">
                                         <span><a>Test speed ></a></span>
                                     </div>
                                 </div>
                                 <div class="service_element">
-                                    <div class="col-xs-1">
+                                    <div class="col-xs-2">
                                         <span>LON1</span>
                                     </div>
-                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                    <div class="col-xs-6 text_left">
                                         <span>London, UK</span>
                                     </div>
-                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                    <div class="col-xs-4 text_right">
                                         <span><a>Test speed ></a></span>
                                     </div>
                                 </div>
                                 <div class="service_element">
-                                    <div class="col-xs-1">
+                                    <div class="col-xs-2">
                                         <span>NYC1</span>
                                     </div>
-                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                    <div class="col-xs-6 text_left">
                                         <span>New York, USA</span>
                                     </div>
-                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                    <div class="col-xs-4 text_right">
                                         <span><a>Test speed ></a></span>
                                     </div>
                                 </div>
@@ -330,68 +330,68 @@
                         <div class="col-md-6">
                             <div class="row">
                                 <div class="service_element">
-                                    <div class="col-xs-1">
+                                    <div class="col-xs-2">
                                         <span>AMS2</span>
                                     </div>
-                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                    <div class="col-xs-6 text_left">
                                         <span>Amsterdam, Netherlands</span>
                                     </div>
-                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                    <div class="col-xs-4 text_right">
                                         <span><a>Test speed ></a></span>
                                     </div>
                                 </div>
                                 <div class="service_element">
-                                    <div class="col-xs-1">
+                                    <div class="col-xs-2">
                                         <span>AMS3</span>
                                     </div>
-                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                    <div class="col-xs-6 text_left">
                                         <span>Amsterdam, Netherlands</span>
                                     </div>
-                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                    <div class="col-xs-4 text_right">
                                         <span><a>Test speed ></a></span>
                                     </div>
                                 </div>
                                 <div class="service_element">
-                                    <div class="col-xs-1">
+                                    <div class="col-xs-2">
                                         <span>AMS2</span>
                                     </div>
-                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                    <div class="col-xs-6 text_left">
                                         <span>Amsterdam, Netherlands</span>
                                     </div>
-                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                    <div class="col-xs-4 text_right">
                                         <span><a>Test speed ></a></span>
                                     </div>
                                 </div>
                                 <div class="service_element">
-                                    <div class="col-xs-1">
+                                    <div class="col-xs-2">
                                         <span>FRA1</span>
                                     </div>
-                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                    <div class="col-xs-6 text_left">
                                         <span>Frankfurt, German</span>
                                     </div>
-                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                    <div class="col-xs-4 text_right">
                                         <span><a>Test speed ></a></span>
                                     </div>
                                 </div>
                                 <div class="service_element">
-                                    <div class="col-xs-1">
+                                    <div class="col-xs-2">
                                         <span>LON1</span>
                                     </div>
-                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                    <div class="col-xs-6 text_left">
                                         <span>London, UK</span>
                                     </div>
-                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                    <div class="col-xs-4 text_right">
                                         <span><a>Test speed ></a></span>
                                     </div>
                                 </div>
                                 <div class="service_element">
-                                    <div class="col-xs-1">
+                                    <div class="col-xs-2">
                                         <span>NYC1</span>
                                     </div>
-                                    <div class="col-xs-6 col-xs-offset-1 text_left">
+                                    <div class="col-xs-6 text_left">
                                         <span>New York, USA</span>
                                     </div>
-                                    <div class="col-xs-3 col-xs-offset-1 text_right">
+                                    <div class="col-xs-4 text_right">
                                         <span><a>Test speed ></a></span>
                                     </div>
                                 </div>
@@ -425,6 +425,13 @@
                 </div>
             </section>
             <!-- /ROCKERBOX -->
+
+            <!-- GET STARTED -->
+            <section id="getstarted">
+                <h2>Get started now.</h2>
+                <button class="btn btn-default">Create your account</button>
+            </section>
+            <!-- /GET STARTED -->
         </main>
         <!-- /MAIN -->
 
