--- a/index.html
+++ b/index.html
@@ -437,7 +437,76 @@
 
         <!-- FOOTER -->
         <footer>
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-4">
+                        <img src="img/logo-small.svg" alt="logo">
+                        <p><i class="far fa-copyright"></i> 2018 DigitalOcean, LLC. All rights reserved.</p>
+                        <h5>Proudly made in NY</h5>
+                        <ul class="list_inline">
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-facebook-square"></i></li>
+                            <li><i class="fab fa-instagram"></i></li>
+                            <li><i class="fab fa-youtube"></i></li>
+                            <li><i class="fab fa-linkedin"></i></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-2">
+                        <ul class="ms_list">
+                            <li><h4>Company</h4></li>
+                            <li><a href="#">Abount</a></li>
+                            <li><a href="#">Leadership</a></li>
+                            <li><a href="#">Link</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#">Partner Network</a></li>
+                            <li><a href="#">Referral Program</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Press</a></li>
+                            <li><a href="#">Legal & Security</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-2">
+                        <ul class="ms_list">
+                            <li><h4>Products</h4></li>
+                            <li><a href="#">Droplets</a></li>
+                            <li><a href="#">Spaces</a></li>
+                            <li><a href="#">Kumbernetes</a></li>
+                            <li><a href="#">Load Balancers</a></li>
+                            <li><a href="#">Block Storage</a></li>
+                            <li><a href="#">Tools & Integrations</a></li>
+                            <li><a href="#">One-Click Apps</a></li>
+                            <li><a href="#">API</a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li><a href="#">Documentation & Security</a></li>
+                            <li><a href="#">Release Notes</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-2">
+                        <ul class="ms_list">
+                            <li><h4>Community</h4></li>
+                            <li><a href="#">Tutorials</a></li>
+                            <li><a href="#">Meetups</a></li>
+                            <li><a href="#">Q&A</a></li>
+                            <li><a href="#">Write for Donations</a></li>
+                            <li><a href="#">Droplets for Demos</a></li>
+                            <li><a href="#">Hatch</a></li>
+                            <li><a href="#">Shop Swag</a></li>
+                            <li><a href="#">Research Program</a></li>
+                            <li><a href="#">Current Research</a></li>
+                            <li><a href="#">Open Source</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-2">
+                        <ul class="ms_list">
+                            <li><h4>Support</h4></li>
+                            <li><a href="#">Contact Support</a></li>
+                            <li><a href="#">FAQ</a></li>
+                            <li><a href="#">Network Status</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </footer>
         <!-- /FOOTER -->
 
