--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               
                   <!-- Collect the nav links, forms, and other content for toggling -->
                   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav hidden-sm">
+                    <ul class="nav navbar-nav hidden-sm hidden-md">
                         <li class="dropdown">
                           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <i class="fas fa-angle-down"></i>
                           <ul class="dropdown-menu">
